--- a/pom.xml
+++ b/pom.xml
@@ -156,11 +156,6 @@
 			<version>1.3.17</version>
 		</dependency>
 		<dependency>
-			<groupId>org.knallgrau.utils</groupId>
-			<artifactId>textcat</artifactId>
-			<version>1.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>fluent-hc</artifactId>
 			<version>${httpclient.version}</version>
@@ -412,6 +407,11 @@
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-stempel</artifactId>
 			<version>${lucene.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.cybozu.labs</groupId>
+			<artifactId>langdetect</artifactId>
+			<version>1.1-20120112</version>
 		</dependency>
 	</dependencies>
 	<properties>
