--- a/pom.xml
+++ b/pom.xml
@@ -626,7 +626,7 @@
 						</property>
 					</systemProperties>
 					<includes>
-						<include>**/Test.java</include>
+						<include>**/LibraryTest.java</include>
 					</includes>
 				</configuration>
 				<executions>
