--- a/pom.xml
+++ b/pom.xml
@@ -476,6 +476,8 @@
 				<version>2.1</version>
 				<configuration>
 					<path>/</path>
+					<uriEncoding>UTF-8</uriEncoding>
+					<additionalClasspathDirs>lib</additionalClasspathDirs>
 				</configuration>
 				<executions>
 					<execution>
