--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
-	<version>1.5-SNAPSHOT</version>
+	<version>1.5.2-SNAPSHOT</version>
 	<scm>
 		<connection>scm:git:git@github.com:jaeksoft/opensearchserver.git</connection>
 		<developerConnection>scm:git:git@github.com:jaeksoft/opensearchserver.git</developerConnection>
@@ -454,6 +454,16 @@
 							<Implementation-Build>${buildNumber}</Implementation-Build>
 						</manifestEntries>
 					</archive>
+					<webResources>
+						<resource>
+							<directory>src/main/webapp/WEB-INF/</directory>
+							<targetPath>WEB-INF</targetPath>
+							<includes>
+								<include>web.xml</include>
+							</includes>
+							<filtering>true</filtering>
+						</resource>
+					</webResources>
 				</configuration>
 			</plugin>
 			<plugin>
