--- a/front/package.json
+++ b/front/package.json
@@ -1,26 +1,45 @@
 {
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@neutrinojs/react": "^9.2.0",
-    "@neutrinojs/react-components": "^9.1.0",
-    "neutrino": "^9.2.0",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+  "name": "opensearchserver",
+  "version": "2.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.3",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.1",
+    "typescript": "^4.0.3",
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "dependencies": {
-    "@hot-loader/react-dom": "^16.13.0",
-    "ace-builds": "^1.4.11",
-    "bootstrap": "^4.5.0",
-    "react": "^16.13.1",
-    "react-ace": "^9.1.1",
-    "react-bootstrap-icons": "^1.0.3-alpha4",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "version": "0.0.0"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
