--- a/pom.xml
+++ b/pom.xml
@@ -84,8 +84,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <qwazr.version>1.5.0-SNAPSHOT</qwazr.version>
-    <log4j.version>2.13.3</log4j.version>
+    <qwazr.version>1.5.2-SNAPSHOT</qwazr.version>
+    <log4j.version>2.14.0</log4j.version>
   </properties>
 
   <dependencyManagement>
@@ -159,7 +159,7 @@
     </dependency>
     <dependency>
       <groupId>com.qwazr</groupId>
-      <artifactId>qwazr-webapps</artifactId>
+      <artifactId>qwazr-server</artifactId>
       <version>${qwazr.version}</version>
     </dependency>
     <!-- End Qwazr -->
@@ -167,7 +167,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
 
@@ -214,7 +214,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.1.0</version>
+          <version>3.2.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -406,6 +406,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
         <version>3.1.2</version>
+        <configuration>
+          <excludeTransitive>true</excludeTransitive>
+        </configuration>
         <executions>
           <execution>
             <id>copy</id>
@@ -445,7 +448,6 @@
                 </artifactItem>
               </artifactItems>
               <outputDirectory>parsers</outputDirectory>
-              <excludeTransitive>true</excludeTransitive>
             </configuration>
           </execution>
         </executions>
