--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,7 +4,7 @@
 name: Java CI with Maven
 
 on: [workflow_dispatch, push, pull_request]
-     
+
 jobs:
   build:
 
@@ -16,5 +16,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.11
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+        server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+    - name: Publish to the Maven Central Repository
+      run: mvn -Dgpg.skip=true --batch-mode deploy
+      env:
+        MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+        MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
